# stout-for-desktop

./: .gitignore  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml
scripts/: fetch-web.sh
src/: config.d.ts  renderer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
