[package]
name = "stoat-desktop"
version = "1.3.0"
description = "Stoat for Desktop"
authors = ["izzy"]
license = "MIT"
repository = "https://github.com/stoatchat/for-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "stoat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.2"
